# app/Controllers/Http/Place/ContactController.js
@@ -1,83 +1,81 @@
 'use strict'
 
-const Photo = use('App/Models/Photo')
+const Contact = use('App/Models/Contact')
 
 
 /**
- * Resourceful controller for interacting with photos
+ * Resourceful controller for interacting with contacts
  */
-class PhotoController {
+class ContactController {
   /**
-   * Show a list of all photos.
-   * GET /places/:places_id/photos
+   * Show a list of all contacts.
+   * GET /places/:places_id/contacts
    *
    * @param {object} ctx
    * @param {Request} ctx.request
    */
   async index({ request, params: { places_id } }) {
     const { page, limit } = request.all()
-    return Photo.query()
+    return Contact.query()
       .with('user')
       .where({ place_id: places_id })
       .paginate({ page, limit })
   }
 
   /**
-   * Create/save a new photo.
-   * POST /places/:places_id/photos
+   * Create/save a new contact.
+   * POST /places/:places_id/contacts
    *
    * @param {object} ctx
    * @param {Request} ctx.request
    * @param {Response} ctx.response
    */
   async store({ request, response, params }) {
-    const { url } = request.all()
-    const place = await Photo.create({
+    const form = request.all()
+    const place = await Contact.create({
       place_id: params.places_id,
-      url,
+      ...form,
     })
     return response.created(place)
   }
 
   /**
-   * Display a single photo.
-   * GET /places/:places_id/photos/:id
+   * Display a single contact.
+   * GET /places/:places_id/contacts/:id
    *
    * @param {object} ctx
    */
   async show({ params }) {
-    return Photo.query()
+    return Contact.query()
       .where({ place_id: params.places_id, id: params.id })
-      .with('user')
       .firstOrFail()
   }
 
   /**
    * Update place details.
-   * PUT or PATCH places/:places_id/photos/:id
+   * PUT or PATCH places/:places_id/contacts/:id
    *
    * @param {object} ctx
    * @param {Request} ctx.request
    * @param {Response} ctx.response
    */
-  async update({ request, response, photo }) {
-    const { url } = request.all()
-    photo.merge({ url })
-    await photo.save()
-    return response.updated(photo)
+  async update({ request, response, contact }) {
+    contact.merge(request.all())
+    await contact.save()
+    return response.updated(contact)
   }
 
   /**
-   * Delete a photo with id.
-   * DELETE places/:places_id/photos/:id
+   * Delete a contact with id.
+   * DELETE places/:places_id/contacts/:id
    *
    * @param {object} ctx
    * @param {Response} ctx.response
    */
-  async destroy({ photo, response }) {
-    await photo.delete()
+  async destroy({ contact, response }) {
+    await contact.delete()
     return response.deleted()
   }
 }
 
-module.exports = PhotoController
+module.exports = ContactController
