# public/swagger.json
@@ -2333,6 +2333,361 @@
         }
       }
     },
+    "/places/{places_id}/contacts": {
+      "get": {
+        "tags": [
+          "contacts"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "get contacts",
+        "operationId": "contacts",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "places_id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "type": "integer",
+            "format": "int64",
+            "default": 0
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "type": "integer",
+            "format": "int64",
+            "default": 20
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "$ref": "#/definitions/Contact"
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/InternalServerError"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "contacts"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "new contact",
+        "operationId": "create-contact",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "places_id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Create new contact",
+            "required": true,
+            "schema": {
+              "properties": {
+                "phone": {
+                  "type": "string",
+                  "example": "+380957791945"
+                },
+                "address": {
+                  "type": "string",
+                  "example": "ул. Седова, 36"
+                },
+                "map_url": {
+                  "type": "string",
+                  "example": "https://www.google.com.ua/maps/place/%D0%9A%D0%BB%D1%83%D0%B1+%22%D0%9E%D1%81%D1%82%D1%80%D0%BE%D0%B2+%D0%BF%D1%80%D0%B8%D0%BA%D0%BB%D1%8E%D1%87%D0%B5%D0%BD%D0%B8%D0%B9%22,+%D0%BB%D0%B0%D0%B7%D0%B5%D1%80%D1%82%D0%B0%D0%B3,+%D0%BF%D0%B5%D0%B9%D0%BD%D1%82%D0%B1%D0%BE%D0%BB,+%D0%BB%D1%83%D1%87%D0%BD%D1%8B%D0%B9+%D1%82%D0%B8%D1%80/@47.8527247,35.1428418,17z/data=!4m13!1m7!3m6!1s0x40dc673c46bdaf25:0x18b329921db7a8b6!2z0YPQuy4g0KHQtdC00L7QstCwLCAzNiwg0JfQsNC_0L7RgNC-0LbRjNC1LCDQl9Cw0L_QvtGA0L7QttGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCA2OTAwMA!3b1!8m2!3d47.8527247!4d35.1429276!3m4!1s0x0:0x96f47db488b09185!8m2!3d47.8521155!4d35.1429006?hl=ru"
+                },
+                "website_url": {
+                  "type": "string",
+                  "example": "https://www.ostrovclub.zp.ua/"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "example@email.com"
+                },
+                "instagram_url": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "$ref": "#/definitions/Contact"
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/responses/Forbidden"
+          },
+          "500": {
+            "$ref": "#/responses/InternalServerError"
+          }
+        }
+      }
+    },
+    "/places/{places_id}/contacts/{id}": {
+      "get": {
+        "tags": [
+          "contacts"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "get contact",
+        "operationId": "contact",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "places_id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          },
+          {
+            "in": "path",
+            "name": "id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "$ref": "#/definitions/Contact"
+            }
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/InternalServerError"
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "contacts"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "modify contact",
+        "operationId": "modify-contact",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "places_id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          },
+          {
+            "in": "path",
+            "name": "id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Modify contact",
+            "required": true,
+            "schema": {
+              "properties": {
+                "phone": {
+                  "type": "string",
+                  "example": "+380957791945"
+                },
+                "address": {
+                  "type": "string",
+                  "example": "ул. Седова, 36"
+                },
+                "map_url": {
+                  "type": "string",
+                  "example": "https://www.google.com.ua/maps/place/%D0%9A%D0%BB%D1%83%D0%B1+%22%D0%9E%D1%81%D1%82%D1%80%D0%BE%D0%B2+%D0%BF%D1%80%D0%B8%D0%BA%D0%BB%D1%8E%D1%87%D0%B5%D0%BD%D0%B8%D0%B9%22,+%D0%BB%D0%B0%D0%B7%D0%B5%D1%80%D1%82%D0%B0%D0%B3,+%D0%BF%D0%B5%D0%B9%D0%BD%D1%82%D0%B1%D0%BE%D0%BB,+%D0%BB%D1%83%D1%87%D0%BD%D1%8B%D0%B9+%D1%82%D0%B8%D1%80/@47.8527247,35.1428418,17z/data=!4m13!1m7!3m6!1s0x40dc673c46bdaf25:0x18b329921db7a8b6!2z0YPQuy4g0KHQtdC00L7QstCwLCAzNiwg0JfQsNC_0L7RgNC-0LbRjNC1LCDQl9Cw0L_QvtGA0L7QttGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCA2OTAwMA!3b1!8m2!3d47.8527247!4d35.1429276!3m4!1s0x0:0x96f47db488b09185!8m2!3d47.8521155!4d35.1429006?hl=ru"
+                },
+                "website_url": {
+                  "type": "string",
+                  "example": "https://www.ostrovclub.zp.ua/"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "example@email.com"
+                },
+                "instagram_url": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "202": {
+            "description": "Updated",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "$ref": "#/definitions/Contact"
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/InternalServerError"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "contacts"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "delete contact",
+        "operationId": "delete-contact",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "places_id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          },
+          {
+            "in": "path",
+            "name": "id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Deleted"
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/InternalServerError"
+          }
+        }
+      }
+    },
     "/rooms": {
       "get": {
         "tags": [
@@ -3523,6 +3878,50 @@
         "url": {
           "type": "string",
           "example": "https://place.com/pucture.jpg"
+        },
+        "created_at": {
+          "type": "string",
+          "example": "2014-06-26 04:07:31"
+        },
+        "updated_at": {
+          "type": "string",
+          "example": "2014-06-26 04:07:31"
+        }
+      }
+    },
+    "Contact": {
+      "required": [
+        "phone"
+      ],
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64",
+          "example": 1
+        },
+        "phone": {
+          "type": "string",
+          "example": "+380957791945"
+        },
+        "address": {
+          "type": "string",
+          "example": "ул. Седова, 36"
+        },
+        "map_url": {
+          "type": "string",
+          "example": "https://www.google.com.ua/maps/place/%D0%9A%D0%BB%D1%83%D0%B1+%22%D0%9E%D1%81%D1%82%D1%80%D0%BE%D0%B2+%D0%BF%D1%80%D0%B8%D0%BA%D0%BB%D1%8E%D1%87%D0%B5%D0%BD%D0%B8%D0%B9%22,+%D0%BB%D0%B0%D0%B7%D0%B5%D1%80%D1%82%D0%B0%D0%B3,+%D0%BF%D0%B5%D0%B9%D0%BD%D1%82%D0%B1%D0%BE%D0%BB,+%D0%BB%D1%83%D1%87%D0%BD%D1%8B%D0%B9+%D1%82%D0%B8%D1%80/@47.8527247,35.1428418,17z/data=!4m13!1m7!3m6!1s0x40dc673c46bdaf25:0x18b329921db7a8b6!2z0YPQuy4g0KHQtdC00L7QstCwLCAzNiwg0JfQsNC_0L7RgNC-0LbRjNC1LCDQl9Cw0L_QvtGA0L7QttGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCA2OTAwMA!3b1!8m2!3d47.8527247!4d35.1429276!3m4!1s0x0:0x96f47db488b09185!8m2!3d47.8521155!4d35.1429006?hl=ru"
+        },
+        "website_url": {
+          "type": "string",
+          "example": "https://www.ostrovclub.zp.ua/"
+        },
+        "email": {
+          "type": "string",
+          "example": "example@email.com"
+        },
+        "instagram_url": {
+          "type": "string"
         },
         "created_at": {
           "type": "string",
